# ragsquared

./: .coverage  .dockerignore  .env.example  .gitattributes  .gitignore  AI_Auditing_System_Design.md  DOCKER.md  Dockerfile  FEATHERLESS_SETUP.md  MVP_SETUP_GUIDE.md  Makefile  QUICK_START.md  RAG_DIAGNOSTIC_GUIDE.md  RAG_SPEC_COMPLIANCE.md  README.md  RECURSIVE_RAG_IMPLEMENTATION.md  SEARCH_BEFORE_FLAGGING.md  WHAT_TO_CHECK_IN_LOGS.md  alembic.ini  check_audit.py  check_audit_db.py  check_audit_progress.py  check_audit_status.py  check_audits.py  check_chunk_statuses.py  check_env_config.py  check_flags.py  check_full_findings.py  check_latest_audit.py  check_processing_status.py  check_queued_audits.py  check_rag_usage.py  check_specific_audit.py  clear_and_regenerate_embeddings.py  clear_audit_flags.py  cli.py  create_chunks_table.py  diagnose_rag.py  docker-compose.yml  docker-entrypoint.sh  (+13 more)
.github/workflows/: tests.yml
ai_auditing_backend.egg-info/: PKG-INFO  SOURCES.txt
backend/ai_auditing_backend.egg-info/: SOURCES.txt  requires.txt  top_level.txt
backend/app/: __init__.py  logging_config.py
backend/data/: app.db  app.db-journal
backend/scripts/: check_env.py  ensure_dirs.py
backend/workers/: extract.py
contracts/: README.md  embedding_pipeline.md
docs/: agentic_engine_visualization.html  frontend.md  operations.md  sector_adaptations.md  testing.md
docs/diagrams/: end-to-end.html  llm-analysis-loop.html  recursive-rag.html  system-overview.html
frontend/: README.md  SETUP.md  next.config.js  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: navigation.tsx
frontend/lib/: api.ts
hackathon_resources/: description.txt
pipelines/: __init__.py  chunk.py  embed.py
scripts/: __init__.py  create_test_audit.py  create_test_audit_for_ui.py  demo.py  demo_walkthrough.md  fix_db_schema.py  vectortest.py
tests/: conftest.py  test_app.py
tests/api/: test_audits.py  test_findings.py  test_upload.py
workers/: __init__.py  extract.py
(+19200 files in other folders)
